# parsex

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  parsexenv.yml
circuits/: basic_load.json  current_parallel.json  dual_source.json  voltage_divider.json  wheatstone_bridge.json
include/: BatchSolver.hpp  CircuitGraph.hpp  LinearSolver.hpp  MNASolver.hpp  ParsexParams.hpp  circuit_topology.hpp  linear_solver.hpp  mna_solver.hpp
include/cpu/: CpuSolver.hpp  cpu_solver.hpp
include/gpu/: GpuSolver.hpp  gpu_solver.hpp
results/: basic_load_sol.json  current_parallel_sol.json  dual_source_sol.json  voltage_divider_sol.json  voltage_divider_sweep_0_sol.json  voltage_divider_sweep_1_sol.json  voltage_divider_sweep_2_sol.json  voltage_divider_sweep_3_sol.json  voltage_divider_sweep_4_sol.json  wheatstone_bridge_sol.json
scripts/: pytorch_demo.ipynb
src/: BatchSolver.cpp  MNASolver.cpp  batch_main.cpp  bindings.cpp  main.cpp  mna_solver.cpp
src/cpu/: CpuSolver.cpp  cpu_solver.cpp
src/gpu/: GpuSolver.cu  gpu_solver.cu
